tests/positive/declarations_complex.em
int main() {
int x = 10;
float y = 1.5;
char z = 'c';
string w = "str";
bool v = false;
return 0;
}