tests/negative/function_calls_complex.em
int func(int x) {
    return x;
}
int main() {
    int x = func(1, 2);
    return 0;
}